# hackathon-lct-rt

./: !docker-compose.yml  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/src/api/: main_router.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: files.py  groups.py  pipeline_callback.py
backend/src/api/v1/schemas/: file_schemas.py  group_schemas.py
backend/src/core/: configs.py
backend/src/infra/storage/: interface.py  local_storage.py
backend/src/services/image_processor/: interface.py
backend/src/services/report/: report.py
backend/src/services/scheduler/: Dockerfile  train.py
backend/src/tasks/: broker.py  ml_tasks.py
backend/src/utils/: common.py  files.py  groups.py
frontend/: .dockerignore  .editorconfig  Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.vue  constants.ts  main.ts  routes.ts
frontend/src/assets/: base.scss  variables.scss
frontend/src/components/: Content.vue  LeftMenu.vue  ReportConstructor.vue  TextItem.vue
frontend/src/icons/: IconArrowLeft.vue  IconArrowRight.vue  IconCheck.vue  IconPlus.vue
frontend/src/interfaces/: documents.ts
frontend/src/pages/: DocumentRecognition.vue  Main.vue
frontend/src/stores/: documents.ts
ml/: Dockerfile  README.md  entrypoint.py  ocr.py  ocr_page.py  ocr_parameters.py  p2pala.py  pipeline_processor.py  pyproject.toml  result-test3.json  storage_manager.py  text_concatenator.py
ml-training/: Dockerfile  README.md  dataset.py  hparams.py  main.py  model.py  prepare_data.py  pyproject.toml  train_baseline.py  train_trocr.py  utils.py
ml/data/: dataset.py  imgprocess.py  transforms.py
ml/nn_models/: models.py
ml/page_xml/: xmlPAGE.py
ml/utils/: polyapprox.py
postprocessing/: .gitignore  Dockerfile  Dockerfile.llm  README.md  docker-compose.yml  main.py  ollama_entrypoint.sh  pyproject.toml
postprocessing/src/: llm.py  models.py  named_entities.txt  processing.py  region_correction.txt  settings.py
(+1 files in other folders)
