[project]
name = "hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "dramatiq[rabbitmq]>=1.18.0",
    "fastapi[standard]>=0.117.1",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.11.9",
]
