[project]
name = "hackaton-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "numpy==1.22.4",
    "opencv-python==3.4.8.29",
    "scipy==1.8.1",
    "shapely==1.8.2",
    "torch==1.4",
    "torchvision==0.5.0",
]
